--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto,
+  "Helvetica Neue", sans-serif;
+  // background-color: #212121;
+}
+
+table {
+  width: 100%;
+}
+
+p, h1, h2, h3, h4, h5, h6, label {
+  color: #FAFAFA;
+  margin: 0 !important;
+}
+
+.pointer {
+  cursor: pointer;
+}
