--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="bg-dark h-100">
+<div class="bg-dark h-100 py-5">
   <div class="container">
+
+    <h1>QuillHub</h1>
+    <hr>
+
     <router-outlet></router-outlet>
   </div>
 </div>
