--- a/src/app/pages/books/detail/detail.component.html
+++ b/src/app/pages/books/detail/detail.component.html
@@ -1,1 +1,46 @@
-<p>detail works!</p>
+<button mat-raised-button color="primary" class="ms-1" routerLink="...">
+  <mat-icon fontIcon="arrow_back_ios_new"></mat-icon>Return
+</button>
+
+<form [formGroup]="form" (ngSubmit)="action()" class="mt-2">
+
+  <div class="row g-2 m-0">
+    <div class="col-12">
+      <mat-form-field class="w-100">
+        <mat-label>Title</mat-label>
+        <input matInput formControlName="Title">
+      </mat-form-field>
+    </div>
+    
+    <div class="col-12 col-sm-6">
+      <mat-form-field class="w-100">
+        <mat-label>Author</mat-label>
+        <input matInput formControlName="Author">
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-sm-6">
+      <mat-form-field class="w-100">
+        <mat-label>ISBN</mat-label>
+        <input type="number" matInput formControlName="ISBN">
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-sm-6">
+      <mat-form-field class="w-100">
+        <mat-label>Genere</mat-label>
+        <input matInput formControlName="Genere">
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-sm-6">
+      <mat-form-field class="w-100">
+        <mat-label>Available copies</mat-label>
+        <input type="number" matInput formControlName="Available_Copies">
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="col-auto">
+    <button mat-raised-button color="accent" type="submit">
+      <mat-icon fontIcon="save"></mat-icon>Guardar
+    </button>
+  </div>
+</form>
