--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,9 +12,13 @@ table {
   width: 100%;
 }
 
-p, h1, h2, h3, h4, h5, h6, label {
+p, h1, h2, h3, h4, h5, h6, label, pre {
   color: #FAFAFA;
   margin: 0 !important;
+}
+
+hr {
+  color: #FAFAFA;
 }
 
 .pointer {
