--- a/src/app/pages/books/books.component.html
+++ b/src/app/pages/books/books.component.html
@@ -1,1 +1,9 @@
 <xtable [data]="data" [displayedColumns]="displayedColumns"></xtable>
+
+<div class="mt-2">
+  <div class="d-flex justify-content-end">
+    <button mat-raised-button color="accent" routerLink="new">
+      <mat-icon fontIcon="add"></mat-icon>New
+    </button>
+  </div>
+</div>
