--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: Roboto,
   "Helvetica Neue", sans-serif;
-  // background-color: #212121;
+  background-color: #212121;
 }
 
 table {
@@ -23,4 +23,8 @@ hr {
 
 .pointer {
   cursor: pointer;
+}
+
+.mdc-text-field--filled {
+  color: #f44336 !important;
 }
